<resources>
    <string name="app_name">Contacts</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="mob_phone">Phone number</string>
    <string name="email">e-mail</string>
    <string name="birth_date">Date of birth</string>
    <string name="facebook_id">Facebook ID</string>
    <string name="foto">Foto</string>
    <string name="group">Group</string>
    <string name="add_contact">Add contact</string>
    <string name="fill_in">Fill in</string>
    <string name="del_all">Delete all</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_editor">EditorActivity</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="exit">Exit</string>
    <string name="title_activity_contact">ContactActivity</string>
    <string name="title_activity_file_dialog">FileDialog</string>
    <string name="to_main">To the main page</string>

    <string name="location">Location</string>
    <string name="cant_read_folder">folder can\'t be read!</string>
    <string name="nnew">New</string>
    <string name="select">Select</string>
    <string name="file_name">File name:</string>
    <string name="create">Save</string>
    <string name="no_data">No Data</string>
    <color name="gray">#ffff0000</color>
    <string name="err">Error</string>
    <string name="choose_picture">Choose picture</string>
    <string name="sortByFirstName">Sort by first name</string>
    <string name="sortByLastName">Sort by last name</string>
    <string name="statistics">Statistics</string>
    <string name="contacts_count">ContactsCount</string>

</resources>
