<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:gravity="center_horizontal" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/title_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/field_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/title_lname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/field_lname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/title_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mob_phone"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/field_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/title_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/field_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/title_birthdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/birth_date"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/field_birthdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/title_social"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/facebook_id"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/field_social"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="25sp" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitStart"

            />
    </LinearLayout>

</ScrollView>
